--- a/src/views/pages/Agenda/modals/parameters/tabs-style.css
+++ b/src/views/pages/Agenda/modals/parameters/tabs-style.css
@@ -1,4 +1,4 @@
-.react-tabs__tab--selected {
+.parameters-w .react-tabs__tab--selected {
     background-color: #7F88C1;
     color: white;
     border-radius: 0;
